Renamed/updated SetUpProject file